# RGit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: access.rs  accounts.rs  auth.rs  capacity.rs  mail.rs  main.rs
static/: index.html  rgit_web.d.ts  rgit_web.js  rgit_web_bg.wasm  rgit_web_bg.wasm.d.ts
web/: Cargo.toml
web/src/: admin.rs  auth.rs  lib.rs  rjson.rs
